For Aria Labels

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             </nav>
         </div>
     </header>
-
     <div class="hero">
         <div class="overlay"></div>
         <div class="hero-content">
@@ -40,21 +39,18 @@
             <a href="#" class="btn"><strong>EXPLORE OUR MENU</strong></a>
         </div>
     </div>
-
     <div class="wrapper">
-
         <section class="grid-container">
             <div class="intro">
                 <div class="content-wrapper">
-                    <p class="otxt">WELCOME TO MY COFFEE HOUSE</p>
-                    <h2>EXPERIENCE A NEW WAY TO TASTE COFFEE</h2>
-
+                    <div class="intro-txt">
+                        <p class="otxt">WELCOME TO MY COFFEE HOUSE</p>
+                        <h2>EXPERIENCE A NEW WAY TO TASTE COFFEE</h2>
+                    </div>
                     <div class="grid-layout">
-
                         <div class="large-img">
                             <img src="images/latte.jpeg" alt="Coffee Pouring">
                         </div>
-
                         <div class="small-img">
                             <img src="images/coffee-beans.jpeg" alt="Coffee Beans">
                             <img src="images/pouring-coffee.jpeg" alt="Coffee Cup">
@@ -66,8 +62,6 @@
             </div>
         </section>
 
-
-        
 
 
         <section class="offers">
@@ -96,33 +90,32 @@
                 </div>
             </div>
         </section>
-
         <section class="explore">
-
             <div class="content-wrapper">
 
+                <div class="ex-grid">
 
-                <div class="menu">
-                    <p class="otxt">OUR MENU</p>
-                    <h2>Explore what we have to offer you</h2>
-                    <a href="#" class="btn">Explore our menu</a>
+                    <div class="menu">
+                        <p class="otxt">OUR MENU</p>
+                        <h2>Explore what we have to offer you</h2>
+                        <a href="#" class="btn">Explore our menu</a>
+                    </div>
+                    <div class="locations">
+                        <p class="otxt">LOCATIONS</p>
+                        <h2>Find Your Nearest Coffee Shop</h2>
+                        <a href="#" class="t-btn">View Locations</a>
+                    </div>
                 </div>
 
-                <div class="locations">
-                    <p class="otxt">LOCATIONS</p>
-                    <h2>Find Your Nearest Coffee Shop</h2>
-                    <a href="#" class="t-btn">View Locations</a>
-                </div>
             </div>
         </section>
-
         <section id="about" class="about">
             <div class="content-wrapper">
                 <div class="about-grid">
                     <div class="about-image">
                         <img src="images/about-us.jpeg" alt="Coffee Pouring">
                     </div>
-                    <div class="about-text">
+                    <div class="about-txt">
                         <p class="otxt">ABOUT US</p>
                         <h2>Read our story</h2>
                         <p>In the heart of our community, My Coffee House emerged as a humble local coffee shop that
@@ -140,10 +133,10 @@
         </section>
         <section class="testimonials">
             <div class="content-wrapper">
-
-                <p class="otxt">TESTIMONIALS</p>
-                <h2>WHAT OUR CUSTOMERS SAY ABOUT US</h2>
-
+                <div class="test-txt">
+                    <p class="otxt">TESTIMONIALS</p>
+                    <h2>WHAT OUR CUSTOMERS SAY ABOUT US</h2>
+                </div>
                 <div class="testimonial-grid">
                     <div class="testimonial-item">
                         <div class="overlay"></div>
@@ -151,7 +144,8 @@
                         <div class="testimonial-content">
                             <div class="testimonial-text">
                                 <blockquote>
-                                    <p>"I always make a point to visit My Coffee Company when in Ottawa. Delicious coffee and friendly service."</p>
+                                    <p>"I always make a point to visit My Coffee Company when in Ottawa. Delicious
+                                        coffee and friendly service."</p>
                                     <p class="customer-name">Jane D., Toronto</p>
                                 </blockquote>
                             </div>
@@ -163,7 +157,8 @@
                         <div class="testimonial-content">
                             <div class="testimonial-text">
                                 <blockquote>
-                                    <p>"Great atmosphere to get some work done while enjoying a cup or two of incredible coffee."</p>
+                                    <p>"Great atmosphere to get some work done while enjoying a cup or two of incredible
+                                        coffee."</p>
                                     <p class="customer-name">Scott S., Ottawa</p>
                                 </blockquote>
                             </div>
@@ -175,7 +170,8 @@
                         <div class="testimonial-content">
                             <div class="testimonial-text">
                                 <blockquote>
-                                    <p>"Best coffee in Ottawa and the service is top notch. Would highly recommend a visit."</p>
+                                    <p>"Best coffee in Ottawa and the service is top notch. Would highly recommend a
+                                        visit."</p>
                                     <p class="customer-name">Susie F., Ottawa</p>
                                 </blockquote>
                             </div>
@@ -187,12 +183,10 @@
     </div>
 
 
-
     <hr class="line">
     <footer class="footer">
         <p>© My Coffee Company 2024</p>
     </footer>
-
 </body>
 
 </html>
