updates id and links

--- a/index.html
+++ b/index.html
@@ -18,19 +18,23 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="main-nav">
+    <header id="header-id" class="header">
+        <div  id="main-id" class="main-nav">
             <div class="logo">
-                <img src="images/my-coffee-shop-logo.svg" alt="My Coffee Shop Logo">
+                <a href="#">
+                    <img id="logo-id" src="images/my-coffee-shop-logo.svg" alt="My Coffee Shop Logo">
+                </a>
             </div>
-            <nav class="nav">
-                <a href="#">ABOUT US</a>
-                <a href="#">MENU</a>
-                <a href="#">LOCATIONS</a>
+
+            <nav id="nav-id" class="nav">
+                <a href="#about-id">ABOUT US</a>
+                <a href="#menu-id">MENU</a>
+                <a href="#loc-id">LOCATIONS</a>
             </nav>
         </div>
     </header>
-    <div class="hero">
+
+    <div id="hero-id" class="hero">
         <div class="overlay"></div>
         <div class="hero-content">
             <h1>EXPERIENCE COFFEE LIKE NEVER BEFORE</h1>
@@ -41,7 +45,7 @@
     </div>
     <div class="wrapper">
         <section class="grid-container">
-            <div class="intro">
+            <div id="intro-id" class="intro">
                 <div class="content-wrapper">
                     <div class="intro-txt">
                         <p class="otxt">WELCOME TO MY COFFEE HOUSE</p>
@@ -64,7 +68,7 @@
 
 
 
-        <section class="offers">
+        <section id="offers-id" class="offers">
             <div class="content-wrapper">
                 <p class="otxt">WHAT WE OFFER</p>
                 <h2>Why Visit Us?</h2>
@@ -90,17 +94,18 @@
                 </div>
             </div>
         </section>
-        <section class="explore">
+        <section id="explore-id" class="explore">
             <div class="content-wrapper">
 
                 <div class="ex-grid">
 
-                    <div class="menu">
+                    <div id="menu-id" class="menu">
                         <p class="otxt">OUR MENU</p>
                         <h2>Explore what we have to offer you</h2>
                         <a href="#" class="btn">Explore our menu</a>
                     </div>
-                    <div class="locations">
+
+                    <div id="loc-id" class="locations">
                         <p class="otxt">LOCATIONS</p>
                         <h2>Find Your Nearest Coffee Shop</h2>
                         <a href="#" class="t-btn">View Locations</a>
@@ -109,7 +114,7 @@
 
             </div>
         </section>
-        <section id="about" class="about">
+        <section id="about-id" class="about">
             <div class="content-wrapper">
                 <div class="about-grid">
                     <div class="about-image">
@@ -131,7 +136,7 @@
                 </div>
             </div>
         </section>
-        <section class="testimonials">
+        <section id="test-id" class="testimonials">
             <div class="content-wrapper">
                 <div class="test-txt">
                     <p class="otxt">TESTIMONIALS</p>
